--- a/FaveButtonDemo/FaveButtonDemo/Base.lproj/Main.storyboard
+++ b/FaveButtonDemo/FaveButtonDemo/Base.lproj/Main.storyboard
@@ -1,12 +1,15 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Delegate-->
+        <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="FaveButtonDemo" customModuleProvider="target" sceneMemberID="viewController">
@@ -15,137 +18,41 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xnp-Bx-c8g" customClass="FaveButton" customModule="FaveButtonDemo" customModuleProvider="target">
-                                <rect key="frame" x="288" y="516" width="24" height="24"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star" translatesAutoresizingMaskIntoConstraints="NO" id="xpx-bb-eVP" customClass="FaveButton" customModule="FaveButtonDemo" customModuleProvider="target">
+                                <rect key="frame" x="123" y="269" width="128" height="128"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="24" id="PSw-kF-tW9"/>
-                                    <constraint firstAttribute="height" constant="24" id="U9y-pw-0B0"/>
+                                    <constraint firstAttribute="height" constant="128" id="AnB-c3-jnU"/>
+                                    <constraint firstAttribute="width" constant="128" id="IWN-JH-zq1"/>
                                 </constraints>
-                                <state key="normal" title="love" image="heart"/>
-                                <connections>
-                                    <outlet property="delegate" destination="BYZ-38-t0r" id="XnC-Fe-Rt2"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="E0d-Bk-ChU" userLabel="star" customClass="FaveButton" customModule="FaveButtonDemo" customModuleProvider="target">
-                                <rect key="frame" x="53" y="278" width="44" height="44"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="44" id="322-34-sEt"/>
-                                    <constraint firstAttribute="height" constant="44" id="cTY-e3-P2H"/>
-                                </constraints>
-                                <state key="normal" image="star"/>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="color" keyPath="selectedColor">
-                                        <color key="value" red="1" green="0.67450980392156867" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="color" keyPath="dotSecondColor">
-                                        <color key="value" red="0.9882352941176471" green="0.40392156862745099" blue="0.1803921568627451" alpha="1" colorSpace="calibratedRGB"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="color" keyPath="dotFirstColor">
-                                        <color key="value" red="0.99607843137254903" green="0.65490196078431373" blue="0.027450980392156862" alpha="1" colorSpace="calibratedRGB"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="color" keyPath="circleFromColor">
-                                        <color key="value" red="0.9882352941176471" green="0.40392156862745099" blue="0.1803921568627451" alpha="1" colorSpace="calibratedRGB"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="color" keyPath="circleToColor">
-                                        <color key="value" red="1" green="0.67450980392156867" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                                <connections>
-                                    <outlet property="delegate" destination="BYZ-38-t0r" id="R6u-Jr-1Jw"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GUv-ku-yeg" userLabel="heart" customClass="FaveButton" customModule="FaveButtonDemo" customModuleProvider="target">
-                                <rect key="frame" x="203" y="278" width="44" height="44"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="44" id="ICX-nz-LkC"/>
-                                    <constraint firstAttribute="width" constant="44" id="Xvm-2b-Lnp"/>
-                                </constraints>
-                                <state key="normal" title="Button" image="heart"/>
-                                <connections>
-                                    <outlet property="delegate" destination="BYZ-38-t0r" id="VEs-rY-5i8"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ksy-xc-Hkw" userLabel="smile" customClass="FaveButton" customModule="FaveButtonDemo" customModuleProvider="target">
-                                <rect key="frame" x="353" y="278" width="44" height="44"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="44" id="dmb-uR-WOY"/>
-                                    <constraint firstAttribute="width" constant="44" id="iPo-lc-Q96"/>
-                                </constraints>
-                                <state key="normal" title="Button" image="smile"/>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="color" keyPath="selectedColor">
-                                        <color key="value" red="0.0" green="0.47843137254901957" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="color" keyPath="circleFromColor">
-                                        <color key="value" red="0.76470588235294112" green="0.82745098039215681" blue="0.40392156862745099" alpha="1" colorSpace="calibratedRGB"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="color" keyPath="circleToColor">
-                                        <color key="value" red="0.23137254901960785" green="0.71764705882352942" blue="0.36470588235294116" alpha="1" colorSpace="calibratedRGB"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                                <connections>
-                                    <outlet property="delegate" destination="BYZ-38-t0r" id="Hqd-Dc-sgd"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ULx-Fl-vuX" userLabel="like" customClass="FaveButton" customModule="FaveButtonDemo" customModuleProvider="target">
-                                <rect key="frame" x="503" y="278" width="44" height="44"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="44" id="dVO-7j-9HI"/>
-                                    <constraint firstAttribute="width" constant="44" id="mcf-ml-h89"/>
-                                </constraints>
-                                <state key="normal" title="Button" image="like"/>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="color" keyPath="selectedColor">
-                                        <color key="value" red="0.23137254901960785" green="0.71764705882352942" blue="0.36470588235294116" alpha="1" colorSpace="calibratedRGB"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="color" keyPath="dotFirstColor">
-                                        <color key="value" red="0.28235294117647058" green="0.80784313725490198" blue="0.75686274509803919" alpha="1" colorSpace="calibratedRGB"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="color" keyPath="dotSecondColor">
-                                        <color key="value" red="0.36078431372549019" green="0.61960784313725492" blue="0.92941176470588238" alpha="1" colorSpace="calibratedRGB"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="color" keyPath="circleFromColor">
-                                        <color key="value" red="0.36078431372549019" green="0.61960784313725492" blue="0.92941176470588238" alpha="1" colorSpace="calibratedRGB"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="color" keyPath="circleToColor">
-                                        <color key="value" red="0.28235294117647058" green="0.80784313725490198" blue="0.75686274509803919" alpha="1" colorSpace="calibratedRGB"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                                <connections>
-                                    <outlet property="delegate" destination="BYZ-38-t0r" id="ZbO-ER-0SF"/>
-                                </connections>
-                            </button>
+                            </imageView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <gestureRecognizers/>
                         <constraints>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="xnp-Bx-c8g" secondAttribute="bottom" constant="60" id="3kD-VX-Nuj"/>
-                            <constraint firstItem="E0d-Bk-ChU" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" multiplier="1:4" id="79R-Js-ei0"/>
-                            <constraint firstItem="ULx-Fl-vuX" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" multiplier="7:4" id="994-ho-Xs9"/>
-                            <constraint firstItem="xnp-Bx-c8g" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Ag8-c9-oqN"/>
-                            <constraint firstItem="E0d-Bk-ChU" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="DZZ-oO-kw5"/>
-                            <constraint firstItem="GUv-ku-yeg" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="F2Y-jb-HQq"/>
-                            <constraint firstItem="Ksy-xc-Hkw" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="Fli-mi-u7O"/>
-                            <constraint firstItem="Ksy-xc-Hkw" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" multiplier="5:4" id="LLv-KX-mui"/>
-                            <constraint firstItem="GUv-ku-yeg" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" multiplier="3:4" id="X3a-CJ-HQk"/>
-                            <constraint firstItem="ULx-Fl-vuX" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="oYS-IY-bT0"/>
+                            <constraint firstItem="xpx-bb-eVP" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="2q5-Ub-FPp"/>
+                            <constraint firstItem="xpx-bb-eVP" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="tce-AA-EED"/>
                         </constraints>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="h3t-JO-cru" appends="YES" id="61y-km-W2m"/>
+                        </connections>
                     </view>
                     <connections>
-                        <outlet property="heartButton" destination="GUv-ku-yeg" id="Ecv-5p-tFr"/>
-                        <outlet property="loveButton" destination="xnp-Bx-c8g" id="SPB-QH-Uha"/>
+                        <outlet property="starView" destination="xpx-bb-eVP" id="X8P-wf-1ic"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="h3t-JO-cru">
+                    <connections>
+                        <action selector="animate:" destination="BYZ-38-t0r" id="O7v-Ms-la0"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
         </scene>
     </scenes>
     <resources>
-        <image name="heart" width="128" height="128"/>
-        <image name="like" width="128" height="128"/>
-        <image name="smile" width="128" height="128"/>
         <image name="star" width="128" height="128"/>
     </resources>
 </document>
